Fri Jul 14 01:10:35 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * config/qt.mpb:

          Split the UIC into UIC and UIC_Impl.  The header is generated by
          the UIC custom definition and the source file generated by the
          UIC_Impl custom definition.

        * config/qt4_core.mpb:
        * config/qt4_designer.mpb:
        * config/qt4_designercomponents.mpb:
        * config/qt4_gui.mpb:
        * config/qt4_network.mpb:
        * config/qt4_opengl.mpb:
        * config/qt4_sql.mpb:
        * config/qt4_svg.mpb:
        * config/qt4_test.mpb:
        * config/qt4_xml.mpb:

          Added support for Qt4.

        * config/qt_moc.mpb:
        * config/qt_uic.mpb:

          Removed these files.  They have been deprecated long enough.

Thu Jul 13 16:29:33 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * templates/bmake.mpd:
        * templates/bmakedllexe.mpt:
        * templates/bmakelibexe.mpt:
        * templates/em3.mpd:
        * templates/em3vcpdllexe.mpt:
        * templates/nmake.mpd:
        * templates/nmakeexe.mpt:
        * templates/vc6.mpd:
        * templates/vc6dspdllexe.mpt:
        * templates/vc7.mpd:
        * templates/vc7csharp.mpd:
        * templates/vc7exe.mpt:
        * templates/vc7vb.mpd:
        * templates/vc8.mpd:
        * templates/vc8csharp.mpd:
        * templates/vc8exe.mpt:

          Added a template variable named 'windows_style' that controls the
          location of Debug executables and all installed executables.  If
          'windows_style' not set, which is the default, a Debug executable
          is placed in the same directory as the project (default setting
          for 'output_dir').  If it is set, the Debug executable is placed
          in the Debug directory.

          Similarly, if 'windows_style' is not set, installed executables
          are placed in the directory determined by the 'install' project